add choice problem
